[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["AlexLacour <alexandre.lacour3@hotmail.fr>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
